fix: remove overflow x on body to clean menu animation

--- a/app/globals.css
+++ b/app/globals.css
@@ -86,7 +86,7 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply overflow-x-hidden bg-background text-foreground;
   }
   h1 {
     @apply text-[32px] font-bold leading-[120%] tracking-normal;
